...
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_list"
            android:layout_width="0dp"
            android:layout_height="22dp"
            tools:listitem="@layout/main_line"
            android:fadingEdgeLength="16dp"
            android:requiresFadingEdge="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="40dp"
            />
    </android.support.v4.widget.SwipeRefreshLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
...
