<resources>
    <string name="app_name">Karchitec</string>
    <string name="refresh">Refresh</string>
    <string name="connection_error">Connection error</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="add_channel">Add RSS feed</string>
    <string name="add_channel_text">Enter the RSS feed URL</string>
    <string name="net_error">Network error</string>
    <string name="url_error">Invalid url</string>
    <string name="feed_error">Not RSS content</string>
    <string name="unknown_error">Unknown error</string>
</resources>
